day 1 done – refactored